--- a/html/about.html
+++ b/html/about.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="../styles/basic.css">
 	<script src="//cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
-<body>
+<body id="about">
 	<header>
 	<img src="../images/logo.jpg" alt="Jay Skript and the Domsters">
 		<nav>
 			<ul>
 				<li><a href="index.html" title="Home">Home</a></li>
-				<li><a href="about.html" title="About">About</a></li>
+				<li><a href="about.html" title="About" class="here">About</a></li>
 				<li><a href="photos.html" title="Photos">Photos</a></li>
 				<li><a href="live.html" title="Live">Live</a></li>
 				<li><a href="contact.html" title="Contact">Contact</a></li>
@@ -20,8 +20,29 @@
 		</nav>
 	</header>
 	<article>
-	<h1>Lorem Ipsum Dolor</h1>
-	<p>不知道你是否注意到了objc_class中也有一个isa对象，这是因为一个 ObjC 类本身同时也是一个对象，为了处理类和对象的关系，runtime 库创建了一种叫做元类 (Meta Class) 的东西，类对象所属类型就叫做元类，它用来表述类对象本身所具备的元数据。类方法就定义于此处，因为这些方法可以理解成类对象的实例方法。每个类仅有一个类对象，而每个类对象仅有一个与之相关的元类。当你发出一个类似[NSObject alloc]的消息时，你事实上是把这个消息发给了一个类对象 (Class Object) ，这个类对象必须是一个元类的实例，而这个元类同时也是一个根元类 (root meta class) 的实例。所有的元类最终都指向根元类为其超类。所有的元类的方法列表都有能够响应消息的类方法。所以当 [NSObject alloc] 这条消息发给类对象的时候，objc_msgSend()会去它的元类里面去查找能够响应消息的方法，如果找到了，然后对这个类对象执行方法调用。</p>
+	<h1>About the band</h1>
+	<nav>
+		<ul>
+			<li><a href="#jay" >Jay Skript</a></li>
+			<li><a href="#domsters" >The Domsters</a></li>
+		</ul>
+	</nav>
+	<section id="jay">
+		<h2>Jay Skript</h2>
+		<p>Jay Skript is going to rock your world!</p>
+		<p>Together with his compatriots the Domsters,
+		Jay is set for world domination. Just you wait and see.</p>
+		<p>Jay Skript has been on the scene since the mid 1990s.
+		His talent hasn't always been recognized or fully appreciated.
+		In the early days, he was often unfavorably compared to bigger,
+		similarly named aritists. That's all in the past now.</p>
+	</section>
+	<section id="domsters">
+		<h2>The Domsters</h2>
+		<p>The domsters have been around, in one form or another, for almost as long. It's only in the past few years that the Domsters have settled down to their current, stable lineup. Now they're a rock-solid bunch:methodical and dependable.</p>
+	</section>
 	</article>
+
+	<script type="text/javascript" src="../scripts/global.js"></script>
 </body>
 </html>
