--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../styles/basic.css">
 	<script src="//cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
-<body>
+<body id="contact">
 	<header>
 	<img src="../images/logo.jpg" alt="Jay Skript and the Domsters">
 		<nav>
@@ -15,7 +15,7 @@
 				<li><a href="about.html" title="About">About</a></li>
 				<li><a href="photos.html" title="Photos">Photos</a></li>
 				<li><a href="live.html" title="Live">Live</a></li>
-				<li><a href="contact.html" title="Contact">Contact</a></li>
+				<li><a href="contact.html" title="Contact" class="here">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
