--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="../styles/basic.css">
 	<script src="//cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
-<body>
+<body id="home">
 	<header>
 	<img src="../images/logo.jpg" alt="Jay Skript and the Domsters">
 		<nav>
 			<ul>
-				<li><a href="index.html" title="Home">Home</a></li>
+				<li><a href="index.html" title="Home" class="here">Home</a></li>
 				<li><a href="about.html" title="About">About</a></li>
 				<li><a href="photos.html" title="Photos">Photos</a></li>
 				<li><a href="live.html" title="Live">Live</a></li>
