--- a/html/live.html
+++ b/html/live.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../styles/basic.css">
 	<script src="//cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
-<body>
+<body id="live">
 	<header>
 	<img src="../images/logo.jpg" alt="Jay Skript and the Domsters">
 		<nav>
@@ -14,14 +14,44 @@
 				<li><a href="index.html" title="Home">Home</a></li>
 				<li><a href="about.html" title="About">About</a></li>
 				<li><a href="photos.html" title="Photos">Photos</a></li>
-				<li><a href="live.html" title="Live">Live</a></li>
+				<li><a href="live.html" title="Live" class="here">Live</a></li>
 				<li><a href="contact.html" title="Contact">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
 	<article>
-	<h1>Lorem Ipsum Dolor</h1>
-	<p>不知道你是否注意到了objc_class中也有一个isa对象，这是因为一个 ObjC 类本身同时也是一个对象，为了处理类和对象的关系，runtime 库创建了一种叫做元类 (Meta Class) 的东西，类对象所属类型就叫做元类，它用来表述类对象本身所具备的元数据。类方法就定义于此处，因为这些方法可以理解成类对象的实例方法。每个类仅有一个类对象，而每个类对象仅有一个与之相关的元类。当你发出一个类似[NSObject alloc]的消息时，你事实上是把这个消息发给了一个类对象 (Class Object) ，这个类对象必须是一个元类的实例，而这个元类同时也是一个根元类 (root meta class) 的实例。所有的元类最终都指向根元类为其超类。所有的元类的方法列表都有能够响应消息的类方法。所以当 [NSObject alloc] 这条消息发给类对象的时候，objc_msgSend()会去它的元类里面去查找能够响应消息的方法，如果找到了，然后对这个类对象执行方法调用。</p>
+	<h1>Tour dates</h1>
+		<table summary="when and where you can see the band">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>City</th>
+					<th>Venue</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>June 9th</td>
+					<td>Portland, <abbr title="Oregin">OR</abbr></td>
+					<td>Crystal Ballroom</td>
+				</tr>
+				<tr>
+					<td>June 10th</td>
+					<td>Seattle, <abbr title="Washington">WA</abbr></td>
+					<td>Crocodile Cafe</td>
+				</tr>
+				<tr>
+					<td>June 12th</td>
+					<td>Sacramento, <abbr title="California">CA</abbr></td>
+					<td>Torch Club</td>
+				</tr>
+				<tr>
+					<td>june 17th</td>
+					<td>Austin, <abbr title="Texas">TX</abbr></td>
+					<td>Speakeasy</td>
+				</tr>
+			</tbody>
+		</table>
 	</article>
 </body>
 </html>
