完成本项目demo

--- a/html/submit.html
+++ b/html/submit.html
@@ -20,24 +20,8 @@
 		</nav>
 	</header>
 	<article>
-		<h1>Contact the band</h1>
-		<form action="submit.html" method="post">
-			<fieldset>
-				<p>
-					<label for="name">Name</label>
-					<input type="text" id="name" name="name" placeholder="Your name" required="required"></input>
-				</p>
-				<p>
-					<label for="email">Email</label>
-					<input type="email" id="email" name="email" placeholder="Your email address" required="required"></input>
-				</p>
-				<p>
-					<label for="message">Message:</label>
-					<textarea cols="45" rows="7" id="message" name="message" required="required" placeholder="Write your message hear."></textarea>
-				</p>
-				<input type="submit" value="Send"></input>
-			</fieldset>
-		</form>
+		<h1>Thanks</h1>
+		<p>Thanks for contacting us. we'll get back to you as soon as we can.</p>
 	</article>
 </body>
 </html>
